updated  structured_base-editor

--- a/ShouldReadMe/contentLU/structured_base-editor.html
+++ b/ShouldReadMe/contentLU/structured_base-editor.html
@@ -72,7 +72,7 @@
         <div class="container-fluid editor-container">
             <!-- instructions -->
             <div class="instructions">
-                <h3>How to use it</h3>
+                <h3>Instructions</h3>
                 <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
                 </p>
             </div><!-- END instructions -->
@@ -83,23 +83,25 @@
                     <!-- icons section -->
                     <div class="icons-subsection">
                         <h3>Icons</h3>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="1"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="2"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="3"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="4"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="5"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="6"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="7"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="8"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="9"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="10"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="11"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="12"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="13"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="14"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="15"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="16"></div>
-                        <div class="icon-container"><img src="images/batman.png" class="default-icon" id="17"></div>
+                        <div class="icons-content text-center">
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="1"></div>
+                            <div class="icon-container"><img src="images/privacy.png" class="default-icon" id="2"></div>
+                            <div class="icon-container"><img src="images/advertising.png" class="default-icon" id="3"></div>
+                            <div class="icon-container"><img src="images/spy others.png" class="default-icon" id="4"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="5"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="6"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="7"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="8"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="9"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="10"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="11"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="12"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="13"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="14"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="15"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="16"></div>
+                            <div class="icon-container"><img src="images/batman.png" class="default-icon" id="17"></div>
+                        </div>
                     </div><!-- END icons section-->
                     <!-- FAQ section -->
                     <div class="faq-section">
@@ -183,18 +185,20 @@
                         
                 </div><!-- END preview section-->
                 <!-- tips section -->
-                <div class="tips-section col-md-3">
-                    <h3>Tips</h3>
-                    <div class="tips-content">
-                        <!-- example -->
-                        <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                        </p>
-                        <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                        </p>
-                        <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                        </p>
-                        <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                        </p><!--  END tips example -->
+                <div class="col-md-3">
+                    <div class="tips-section">
+                        <h3>Tips</h3>
+                        <div class="tips-content">
+                            <!-- example -->
+                            <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                            </p>
+                            <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                            </p>
+                            <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                            </p>
+                            <p>Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                            </p><!--  END tips example -->
+                        </div>
                     </div>
                 </div><!-- END tips section-->
             </div><!-- END grouped content -->
